--- a/functions/package.json
+++ b/functions/package.json
@@ -12,10 +12,11 @@
     "node": "10"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.3.0",
+    "firebase-functions": "^3.6.1",
     "puppeteer": "^2.1.1"
   },
   "devDependencies": {
